--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,7 @@
               </div>
               <div class="section-body">
                 <div class="section-image">
-                  <img class="lazyload fadein" data-src="img/about/profile.jpg" alt="">
+                  <img class="lazyload fadein" data-src="img/about/profile_me.jpg" alt="">
                 </div>
                 <div class="section-desc">
                   <div class="section-text">
