--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
   <meta property='og:description' content='softwareエンジニア spite400k ポートフォリオのポートフォリオサイト'>
   <meta property="og:image" content="img/ogp.png">
   <meta name="description" content="softwareエンジニア spite400k ポートフォリオのポートフォリオサイト" />
-  <title>Webデザイナー TARO YAMADA ポートフォリオ</title>
+  <title>softwareエンジニア spite400k ポートフォリオ</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
   <link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/photoswipe/photoswipe.css" media="all" rel="stylesheet" type="text/css" />
@@ -55,12 +55,15 @@
                   <div class="section-text">
 
 
-                    フルスタック(を目指したい)エンジニア<br>
+                    フルスタック(を目指したい)エンジニア30代<br><br>
 
                     初めまして、私は日本国内の大手SIerでエンジニアをしています。<br>
                     今後twitterなどネット上で活動していく中で、私の事を皆様に知っていただこうと思いポートフォリオを立ち上げました。<br><br>
+                    2児の父をしているため、限られた時間で日々勉強中(主に朝1～3時)
+                    <br><br>
+                    最近はフロント周りのスキルと、Dockerを使った開発環境構築のテンプレ化に夢中
+                    <br><br>
                     どうぞよろしくお願いいたします。<br><br>
-                    
 
 
                     
